--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
    <script>
     // Redirección por JavaScript como respaldo
-    window.location.href = "down.html";
+    window.location.href = "downl.html";
   </script>
 
 </body>
